--- a/index.html
+++ b/index.html
@@ -14,11 +14,141 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      test
-    </div>
   </header>
-  <main></main>
+  <main>
+    <section id="process" class="process">
+      <div class="container">
+        <div class="process__heading text-center">
+          <h3>Our Work Process</h3>
+          <p>Was years it seasons was there form he in in them together over that, 
+            third sixth gathered female creeping bearing behold years.</p>
+        </div>
+        <div class="process__body">
+          <video src="videos/GB.mp4" controls></video>
+        </div>
+      </div>
+    </section>
+    <section id="services" class="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-sm-6">
+            <div class="card">
+              <img class="card-img-top" src="images/diamond.png" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">ui / ux design</h4>
+                <p class="card-text">Be set fourth land god darkness make it wherein own</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card">
+              <img class="card-img-top" src="images/arc.png" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">web development</h4>
+                <p class="card-text text-muted">A she'd them bring void moving third she'd kind fill</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card">
+              <img class="card-img-top" src="images/phone.png" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">app / mobile</h4>
+                <p class="card-text">Dominion man second spirit he, earth they're creeping</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card">
+              <img class="card-img-top" src="images/joy.png" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">game design</h4>
+                <p class="card-text">Morning his saying moveth it multiply appear life be</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3 col-sm-6">
+            <div class="card">
+              <img class="card-img-top" src="images/plane.png" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">SEO / marketing</h4>
+                <p class="card-text">Give won't after land fill creeping meat you, may</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card">
+              <img class="card-img-top" src="images/star.png" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">photography</h4>
+                <p class="card-text text-muted">Creepeth one seas cattle grass give moving saw give</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card">
+              <img class="card-img-top" src="images/wand.png" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">graphic design</h4>
+                <p class="card-text">Open, great whales air rule for, fourth life whales</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card">
+              <img class="card-img-top" src="images/bucket.png" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">illustrations</h4>
+                <p class="card-text">Whales likeness hath, man kind for them air two won't</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="testimonials" class="testimonials">
+      <div class="testimonials__body container">
+        <div id="textSlide" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#textSlide" data-slide-to="0" class="active dot"></li>
+            <li data-target="#textSlide" data-slide-to="1" class="dot"></li>
+            <li data-target="#textSlide" data-slide-to="2" class="dot"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <div class="quote-desk">
+                <p class="quote"> 
+                    "Outstanding job and exceeded all expectations. It was a pleasure 
+                    to work with them on a sizable first project and am looking 
+                    forward to start the next one asap."
+                </p>
+                <h5 class="author">Michael Hopkins</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="quote-desk">
+                <p class="quote"> 
+                    "The best preparation for tomorrow is doing your best today."
+                </p>
+                <h5 class="author">H. Jackson Brown, Jr.</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="quote-desk">
+                  <p class="quote"> 
+                      "The oldest and strongest emotion of mankind is fear,
+                       and the oldest and strongest kind of fear is fear of the unknown."
+                  </p>
+                  <h5 class="author">H. P. Lovecraft</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   <footer></footer>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
