last changes on footer

--- a/index.html
+++ b/index.html
@@ -24,19 +24,25 @@
   		<div class="row">
 
 	  		<!-- Картинки компаний -->
-	  		<div class="col-xs-12 companies-wrap">
+	  		<div class="col-xs-12 hidden-xs-down companies-wrap">
 
 	  			<img src="images/logos.png" alt="companies logos" class="img-fluid">
 
-	  		</div> 		
+	  		</div>
+
+        <div class="col-12 hidden-sm-up"><img src="images/company-1.png" alt="company-1" class="img-fluid"></div>     
+        <div class="col-12 hidden-sm-up"><img src="images/company-2.png" alt="company-2" class="img-fluid"></div>     
+        <div class="col-12 hidden-sm-up"><img src="images/company-3.png" alt="company-3" class="img-fluid"></div>     
+        <div class="col-12 hidden-sm-up"><img src="images/company-4.png" alt="company-4" class="img-fluid"></div>     
+        <div class="col-12 hidden-sm-up"><img src="images/company-5.png" alt="company-5" class="img-fluid"></div>	
 
   		</div>  		
   	</div>
   	<div class="container-fluid form-wrap">
   		<div class="row">
-  			<div class="col-md-8 offset-md-2 ">
+  			<div class="col-md-8 col-12 offset-md-2 ">
 
-	  			<div class="col-md-8 offset-md-2 ">
+	  			<div class="col-md-8 offset-md-2">
 	  				<h2>Need a Project?</h2>
   					<p>Let us know what you're looking for in an agency. We'll take a look and see if this could be the start of something beautiful.</p>
 	  			</div>
@@ -68,16 +74,16 @@
   <footer>
   	<div class="container">
   		<div class="row">
-  			<div class="col-md-4 copyright-wrap">
+  			<div class="col-md-4 col-sm-6 col-12 copyright-wrap">
   				<h4>Piroll Design, Inc.</h4>
   				<p>© 2017 Piroll. All rights reserved.</p>
   				<p>Designed by robirurk.</p>
   			</div>
-  			<div class="col-md-3 contact-wrap">
+  			<div class="col-md-3 col-sm-6 col-12 contact-wrap">
   				<p>hello@pirolltheme.com</p>
   				<a href="tel: +44 987 065 908">+44 987 065 908 </a>
   			</div>
-  			<div class="col-md-3 information-wrap">
+  			<div class="col-md-4 col-sm-6 col-12 information-wrap">
   				<ul class="list-unstyled">
   					<li><a href="#">Projects</a></li>
   					<li><a href="#">About</a></li>
@@ -91,8 +97,8 @@
   					<li><a href="#">Legals</a></li>
   				</ul>
   			</div>
-  			<div class="col-md-2 social-wrap">
-  				<ul class="list-unstyled float-right">
+  			<div class="col-md-1 col-sm-6 col-12 social-wrap">
+  				<ul class="list-unstyled">
   					<li><a href="#">Facebook</a></li>
   					<li><a href="#">Twitter</a></li>
   					<li><a href="#">Instagram</a></li>
