added svg effect

--- a/index.html
+++ b/index.html
@@ -32,77 +32,117 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6">
-            <div class="card">
-              <img class="card-img-top" src="images/diamond.png" alt="Card image cap">
-              <div class="card-block">
-                <h4 class="card-title">ui / ux design</h4>
-                <p class="card-text">Be set fourth land god darkness make it wherein own</p>
-              </div>
+            <div class="svg-wrapper">
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <rect class="shape" height="100%" width="100%" />
+                <div class="card">
+                  <img class="card-img-top" src="images/diamond.png" alt="Card image cap">
+                  <div class="card-block">
+                    <h4 class="card-title">ui / ux design</h4>
+                    <p class="card-text">Be set fourth land god darkness make it wherein own</p>
+                  </div>
+                </div>
+              </svg>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
-            <div class="card">
-              <img class="card-img-top" src="images/arc.png" alt="Card image cap">
-              <div class="card-block">
-                <h4 class="card-title">web development</h4>
-                <p class="card-text text-muted">A she'd them bring void moving third she'd kind fill</p>
-              </div>
+            <div class="svg-wrapper">
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <rect class="shape" height="100%" width="100%" />
+                <div class="card">
+                  <img class="card-img-top" src="images/arc.png" alt="Card image cap">
+                  <div class="card-block">
+                    <h4 class="card-title">web development</h4>
+                    <p class="card-text text-muted">A she'd them bring void moving third she'd kind fill</p>
+                  </div>
+                </div>
+              </svg>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
-            <div class="card">
-              <img class="card-img-top" src="images/phone.png" alt="Card image cap">
-              <div class="card-block">
-                <h4 class="card-title">app / mobile</h4>
-                <p class="card-text">Dominion man second spirit he, earth they're creeping</p>
-              </div>
+            <div class="svg-wrapper">
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <rect class="shape" height="100%" width="100%" />
+                <div class="card">
+                  <img class="card-img-top" src="images/phone.png" alt="Card image cap">
+                  <div class="card-block">
+                    <h4 class="card-title">app / mobile</h4>
+                    <p class="card-text">Dominion man second spirit he, earth they're creeping</p>
+                  </div>
+                </div>
+              </svg>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
-            <div class="card">
-              <img class="card-img-top" src="images/joy.png" alt="Card image cap">
-              <div class="card-block">
-                <h4 class="card-title">game design</h4>
-                <p class="card-text">Morning his saying moveth it multiply appear life be</p>
-              </div>
+            <div class="svg-wrapper">
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <rect class="shape" height="100%" width="100%" />
+                <div class="card">
+                  <img class="card-img-top" src="images/joy.png" alt="Card image cap">
+                  <div class="card-block">
+                    <h4 class="card-title">game design</h4>
+                    <p class="card-text">Morning his saying moveth it multiply appear life be</p>
+                  </div>
+                </div>
+              </svg>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-3 col-sm-6">
-            <div class="card">
-              <img class="card-img-top" src="images/plane.png" alt="Card image cap">
-              <div class="card-block">
-                <h4 class="card-title">SEO / marketing</h4>
-                <p class="card-text">Give won't after land fill creeping meat you, may</p>
-              </div>
+            <div class="svg-wrapper">
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <rect class="shape" height="100%" width="100%" />
+                <div class="card">
+                  <img class="card-img-top" src="images/plane.png" alt="Card image cap">
+                  <div class="card-block">
+                    <h4 class="card-title">SEO / marketing</h4>
+                    <p class="card-text">Give won't after land fill creeping meat you, may</p>
+                  </div>
+                </div>
+              </svg>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
-            <div class="card">
-              <img class="card-img-top" src="images/star.png" alt="Card image cap">
-              <div class="card-block">
-                <h4 class="card-title">photography</h4>
-                <p class="card-text text-muted">Creepeth one seas cattle grass give moving saw give</p>
-              </div>
+            <div class="svg-wrapper">
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <rect class="shape" height="100%" width="100%" />
+                <div class="card">
+                  <img class="card-img-top" src="images/star.png" alt="Card image cap">
+                  <div class="card-block">
+                    <h4 class="card-title">photography</h4>
+                    <p class="card-text text-muted">Creepeth one seas cattle grass give moving saw give</p>
+                  </div>
+                </div>
+              </svg>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
-            <div class="card">
-              <img class="card-img-top" src="images/wand.png" alt="Card image cap">
-              <div class="card-block">
-                <h4 class="card-title">graphic design</h4>
-                <p class="card-text">Open, great whales air rule for, fourth life whales</p>
-              </div>
+            <div class="svg-wrapper">
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <rect class="shape" height="100%" width="100%" />
+                <div class="card">
+                  <img class="card-img-top" src="images/wand.png" alt="Card image cap">
+                  <div class="card-block">
+                    <h4 class="card-title">graphic design</h4>
+                    <p class="card-text">Open, great whales air rule for, fourth life whales</p>
+                  </div>
+                </div>
+              </svg>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
-            <div class="card">
-              <img class="card-img-top" src="images/bucket.png" alt="Card image cap">
-              <div class="card-block">
-                <h4 class="card-title">illustrations</h4>
-                <p class="card-text">Whales likeness hath, man kind for them air two won't</p>
-              </div>
+            <div class="svg-wrapper">
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <rect class="shape" height="100%" width="100%" />
+                <div class="card">
+                  <img class="card-img-top" src="images/bucket.png" alt="Card image cap">
+                  <div class="card-block">
+                    <h4 class="card-title">illustrations</h4>
+                    <p class="card-text">Whales likeness hath, man kind for them air two won't</p>
+                  </div>
+                </div>
+              </svg>
             </div>
           </div>
         </div>
