--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/nurbek.css">
   <link rel="stylesheet" href="css/erke.css">
   <link rel="stylesheet" href="css/meir.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -18,7 +19,120 @@
       test
     </div>
   </header>
-  <main></main>
+  <main>
+    <div class="skills">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5 content">
+            <ul><h3>Professional Skills</h3>
+              <li><div class="text">UI/UX Design    75%</div>
+                <div class="progress" style="height:4px;">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width:75%;" aria-valuenow="75" aria-valuemin="0"></div>
+                </div>
+              </li>
+              <li><div class="text">web development    90%</div>
+                <div class="progress" style="height:4px;">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width:90%;" aria-valuenow="90" aria-valuemin="0"></div>
+                </div>
+              </li>
+              <li> <div class="text">marketing    65%</div>
+                <div class="progress" style="height:4px;">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width:65%;" aria-valuenow="65" aria-valuemin="0"></div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 offset-md-1">
+            <img src="img/sheldon.jpg" alt="Sheldon" title="Нурбек">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="numbers">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 portfolio">
+            <!-- <img src="img/portfolio.png" alt=""> -->
+            <span>548</span>
+            <p>projects completed</p>
+          </div>
+          <div class="col-md-3 hours">
+            <span>1465</span>
+            <p>working hours </p>
+          </div>
+          <div class="col-md-3 feedbacks">
+            <span>612</span>
+            <p>positive feedbacks </p>
+          </div>
+          <div class="col-md-3 happy">
+            <span>735</span>
+            <p>happy clients </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="work">
+        <div class="row">
+          <div class="col-md-3 picture">
+            <img src="img/homer.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="effect"><img src="img/eye.png" alt=""></div>
+            </div>
+          </div>
+          <div class="col-md-3 picture">
+            <img src="img/good_luck.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="effect"><img src="img/eye.png" alt=""></div>
+            </div>
+          </div>
+          <div class="col-md-3 picture">
+            <img src="img/picture.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="effect"><img src="img/eye.png" alt=""></div>
+            </div>
+          </div>
+          <div class="col-md-3 picture">
+            <img src="img/picture-1.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="effect"><img src="img/eye.png" alt=""></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3 picture">
+            <img src="img/Milla.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="effect"><img src="img/eye.png" alt=""></div>
+            </div>
+          </div>
+          <div class="col-md-3 picture">
+            <img src="img/-40.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="effect"><img src="img/eye.png" alt=""></div>
+            </div>
+          </div>
+          <div class="col-md-3 picture">
+            <img src="img/kirpich.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="effect"><img src="img/eye.png" alt=""></div>
+            </div>
+          </div>
+          <div class="col-md-3 picture">
+            <img src="img/hands.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="effect"><img src="img/eye.png" alt=""></div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="more_work">
+      <div class="row">
+          <div class="col-md-12">
+            <h5>load more work</h5>
+          </div> 
+        </div>        
+    </div>
+  </main>
   <footer></footer>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
