--- a/index.html
+++ b/index.html
@@ -16,86 +16,86 @@
 <body>
   <header>
   	<section id="first">
-    <div class="container">
-    	<div class="logo">
-    	<div class="brand">
-    		<img src="images/logo1.png" alt="brand">
-    	</div>
-      <nav class="navbar navbar-toggleable-md float-right">
-		  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		   <div class="collapse navbar-collapse" id="navbarNav">
-		    <ul class="navbar-nav">
-		    	<li class="nav-item ">
-		        <a class="nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item ">
-		        <a class="nav-link" href="#"> About<span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Work</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Process</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Services</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Testimonials</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Contact</a>
-		      </li>
-		    </ul>
-		  </div>
-		</nav>	
-    	</div>
-    	<div class="design">
-			<div class="main">
-				We Design and Develop
-			</div>
-			<div class="word">
-				We are a new design studio based in USA. We have over 
-				20 years of combined experience, and know a thing or two 
-				about designing websites and mobile apps.
-			</div>
-			<button type="button" class="btn btn-self">Contact us</button>
-		</div>		
-	</section>
-	<section class="about">
-		<div class="about-us">
-			About Us
-		</div>
-		<div class="about-us1">
-			Divide have don't man wherein air fourth. Own itself make have night won't make. 
-			A you under Seed appear which good give. Own give air without fowl moveth dry first 
-			heaven fruit, dominion she'd won't very all.
-		</div>
-		<div class="signature">
-			<img src="images/signature.png" alt="signature">
-		</div>
-	</section>
+      <div class="container">
+      	<div class="logo">
+        	<div class="brand">
+        		<img src="images/logo1.png" alt="brand">
+        	</div>
+          <nav class="navbar navbar-toggleable-md float-right">
+      		  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      		    <span class="navbar-toggler-icon"></span>
+      		  </button>
+      		   <div class="collapse navbar-collapse" id="navbarNav">
+      		    <ul class="navbar-nav">
+      		    	<li class="nav-item ">
+      		        <a class="nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
+      		      </li>
+      		      <li class="nav-item ">
+      		        <a class="nav-link" href="#"> About<span class="sr-only">(current)</span></a>
+      		      </li>
+      		      <li class="nav-item">
+      		        <a class="nav-link" href="#">Work</a>
+      		      </li>
+      		      <li class="nav-item">
+      		        <a class="nav-link" href="#">Process</a>
+      		      </li>
+      		      <li class="nav-item">
+      		        <a class="nav-link" href="#">Services</a>
+      		      </li>
+      		      <li class="nav-item">
+      		        <a class="nav-link" href="#">Testimonials</a>
+      		      </li>
+      		      <li class="nav-item">
+      		        <a class="nav-link" href="#">Contact</a>
+      		      </li>
+      		    </ul>
+      		  </div>
+    		  </nav>	
+      	</div>
+      	<div class="design">
+    			<div class="main">
+    				We Design and Develop
+    			</div>
+    			<div class="word">
+    				We are a new design studio based in USA. We have over 
+    				20 years of combined experience, and know a thing or two 
+    				about designing websites and mobile apps.
+    			</div>
+  			 <button type="button" class="btn btn-self">Contact us</button>
+  		  </div>
+      </div>  		
+    </section>
+  	<section class="about">
+  		<div class="about-us">
+  			About Us
+  		</div>
+  		<div class="about-us1">
+  			Divide have don't man wherein air fourth. Own itself make have night won't make. 
+  			A you under Seed appear which good give. Own give air without fowl moveth dry first 
+  			heaven fruit, dominion she'd won't very all.
+  		</div>
+  		<div class="signature">
+  			<img src="images/signature.png" alt="signature">
+  		</div>
+  	</section>
   </header>
   <main>
-
     <div class="skills">
       <div class="container">
         <div class="row">
           <div class="col-md-5 content">
             <ul><h3>Professional Skills</h3>
-              <li><div class="text">UI/UX Design    75%</div>
+              <li><div class="test">UI/UX Design 75%</div>
                 <div class="progress" style="height:4px;">
                   <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width:75%;" aria-valuenow="75" aria-valuemin="0"></div>
                 </div>
               </li>
-              <li><div class="text">web development    90%</div>
+              <li><div class="test">web development  90%</div>
                 <div class="progress" style="height:4px;">
                   <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width:90%;" aria-valuenow="90" aria-valuemin="0"></div>
                 </div>
               </li>
-              <li> <div class="text">marketing    65%</div>
+              <li> <div class="test">marketing  65%</div>
                 <div class="progress" style="height:4px;">
                   <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width:65%;" aria-valuenow="65" aria-valuemin="0"></div>
                 </div>
