--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <main>
     <div class="skills">
       <div class="container">
-        <div class="row">
+        <div class="row row-no-padding">
           <div class="col-md-5 content">
             <ul><h3>Professional Skills</h3>
               <li><div class="test">UI/UX Design 75%</div>
@@ -112,7 +112,6 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 portfolio">
-            <!-- <img src="img/portfolio.png" alt=""> -->
             <span>548</span>
             <p>projects completed</p>
           </div>
@@ -132,7 +131,7 @@
       </div>
     </div>
     <div class="work">
-        <div class="row">
+        <div class="row row-no-padding">
           <div class="col-md-3 picture">
             <img src="img/homer.jpg" alt="" class="image">
             <div class="overlay">
@@ -158,7 +157,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row row-no-padding">
           <div class="col-md-3 picture">
             <img src="img/Milla.jpg" alt="" class="image">
             <div class="overlay">
@@ -186,11 +185,7 @@
         </div>
     </div>
     <div class="more_work">
-      <div class="row">
-          <div class="col-md-12">
-            <h5>load more work</h5>
-          </div> 
-        </div>        
+      <h5>load more work</h5>
     </div>
   
 
@@ -369,7 +364,7 @@
   </main>
   <div class="content-bottom">
   	<div class="container">
-  		<div class="row">
+  		<div class="row ">
 
 	  		<!-- Картинки компаний -->
 	  		<div class="col-xs-12 hidden-xs-down companies-wrap">
