finished my part

--- a/index.html
+++ b/index.html
@@ -77,31 +77,35 @@
               <div class="carousel-inner" role="listbox">
                 <div class="carousel-item">
                   <div class="cards">
-                    <div class="card">
-                      <img src="cro.jpg" alt="Cristiano Ronaldo">
+                    <div class="player-card">
+                      <div class="overlay">+</div>
+                      <img src="images/messi.jpg" alt="Lionel Messi">
                       <div class='data'>
-                        <h4>Криштиа́ну Рона́лду</h4>
+                        <h4>Лионель Месси</h4>
                         <span>Нападающий</span>
-                        <p>Роналду стал первым португальским игроком в истории «Манчестер Юнайтед»,
-                          заключив контракт с клубом после окончания сезона 2002/03</p>
+                        <p>В 2005 году дебютировал за сборную Аргентины. 
+                          Является самым молодым игроком, забившим гол за «альбиселесте» на чемпионате мира.</p>
                       </div>
                     </div>
-                    <div class="card">
-                      <img src="bale.jpg" alt="Gareth Bale">
+                    <div class="player-card">
+                      <div class="overlay">+</div>
+                      <img src="images/suar.jpg" alt="Luis Suarez">
                       <div class='data'>
-                        <h4>Гарет Бейл</h4>
+                        <h4>Луис Суарес</h4>
                         <span>Нападающий</span>
-                        <p>Выступает на позиции крайнего нападающего. 
-                         Отличается высокой скоростью и хорошо поставленным ударом.</p>
+                        <p>После перехода Луис отметил:
+                          «Ливерпуль» сделал все возможное, чтобы я остался, но играть и жить в 
+                          Испании — это моя мечтаром.</p>
                       </div>
                     </div>
-                    <div class="card">
-                      <img src="benz.jpg" alt="Karim Benzema">
+                    <div class="player-card">
+                      <div class="overlay">+</div>
+                      <img src="images/cout.jpg" alt="Philippe Coutinho">
                       <div class='data'>
-                       <h4>Карим Бензема</h4>
-                        <span>Нападающий</span>
-                        <p>В 9 лет попал в систему подготовки «Лиона», в 17 стал одним
-                         из лучших игроков резерва команды, забивая по три десятка голов за сезон</p>
+                        <h4>Филиппе Коутиньо</h4>
+                        <span>Полузащитник</span>
+                        <p>В 2011 году Коутиньо выступал за сборную Бразилии U-20 на чемпионате мира в Турции. 
+                          В финале турнира бразильцы переиграли сверстников из Португалии. На счету Филиппе три гола</p>
                       </div>
                     </div>
                   </div>
@@ -109,6 +113,7 @@
                 <div class="carousel-item active">
                   <div class="cards">
                     <div class="player-card">
+                      <div class="overlay">+</div>
                       <img src="images/cro.jpg" alt="Cristiano Ronaldo">
                       <div class='data'>
                         <h4>Криштиа́ну Рона́лду</h4>
@@ -118,6 +123,7 @@
                       </div>
                     </div>
                     <div class="player-card">
+                      <div class="overlay">+</div>
                       <img src="images/bale.jpg" alt="Gareth Bale">
                       <div class='data'>
                         <h4>Гарет Бейл</h4>
@@ -127,6 +133,7 @@
                       </div>
                     </div>
                     <div class="player-card">
+                      <div class="overlay">+</div>
                       <img src="images/benz.jpg" alt="Karim Benzema">
                       <div class='data'>
                         <h4>Карим Бензема</h4>
@@ -138,31 +145,36 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="card">
-                    <img src="cro.jpg" alt="Cristiano Ronaldo">
-                    <div class='data'>
-                      <h4>Криштиа́ну Рона́лду</h4>
-                      <span>Нападающий</span>
-                      <p>Роналду стал первым португальским игроком в истории «Манчестер Юнайтед»,
-                          заключив контракт с клубом после окончания сезона 2002/03</p>
+                  <div class="cards">
+                    <div class="player-card">
+                      <div class="overlay">+</div>
+                      <img src="images/ney.jpg" alt="Neymar">
+                      <div class='data'>
+                        <h4>Неймар</h4>
+                        <span>Нападающий</span>
+                        <p>Всего же за «Барселону» Неймар сыграл 186 матчей,
+                           забил 105 мячей и отдал 59 голевых передач.</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="card">
-                    <img src="bale.jpg" alt="Gareth Bale">
-                    <div class='data'>
-                      <h4>Гарет Бейл</h4>
-                      <span>Нападающий</span>
-                      <p>Выступает на позиции крайнего нападающего. 
-                        Отличается высокой скоростью и хорошо поставленным ударом.</p>
+                    <div class="player-card">
+                      <div class="overlay">+</div>
+                      <img src="images/cav.jpg" alt="Edinson Cavani">
+                      <div class='data'>
+                        <h4>Эдинсон Кавани</h4>
+                        <span>Нападающий</span>
+                        <p>6 февраля 2008 года он сыграл свой первый матч
+                           за взрослую сборную Уругвая против Колумбии и сразу же забил свой первый гол.</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="card">
-                    <img src="benz.jpg" alt="Karim Benzema">
-                    <div class='data'>
-                      <h4>Карим Бензема</h4>
-                      <span>Нападающий</span>
-                      <p>В 9 лет попал в систему подготовки «Лиона», в 17 стал одним
-                          из лучших игроков резерва команды, забивая по три десятка голов за сезон</p>
+                    <div class="player-card">
+                      <div class="overlay">+</div>
+                      <img src="images/mba.jpg" alt="Kylian Mbappe">
+                      <div class='data'>
+                        <h4>Килиан Мбаппе</h4>
+                        <span>Нападающий</span>
+                        <p>В возрасте 18 лет и 95 дней он стал 
+                          самым молодым игроком в истории французской сборной после Марьяна Висньески</p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -172,6 +184,89 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-3">
+            <div class="footer-column">
+              <h4><span class="bckq"></span> О нас</h4>
+              <h3 class="brand-footer"><span class="text-light">ваш</span><span class="text-green">лого</span></h3>
+              <div class="text">
+                <p class="text-light-blue">Phasellus et nisl tellus. Etiam facilisis eu nisi scelerisque faucibus. Proin semper suscipit magna, nec imperdiet lacus semper vitae.
+                   Sed hendrerit enim non justo posuere placerat eget purus mauris.</p>
+                <p class="text-light-blue">Etiam facilisis eu nisi scelerisque faucibus. Proin semper suscipit magna, nec imperdiet lacus semper.</p>
+              </div>
+              <form class="subscribe">
+                <input type="email" class="text-light-blue" placeholder="mymail@gmail.com">
+                <button type="submit">&gt;</button>
+              </form>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="footer-column">
+              <h4><span class="bckq"></span> Свежие <span class="text-light">Новости</span></h4>
+              <div class="cards">
+                <div class="news-card">
+                  <img src="images/github-512.png" alt="news">
+                  <p class="text-light-blue">Заголовок какой-нибудь новости или поста в блоге. Заголовок какой-нибудь новости.</p>
+                </div>
+                <div class="news-card">
+                  <img src="images/github-512.png" alt="news">
+                  <p class="text-light-blue">Название какой-нибудь новости при наводе.</p>
+                </div>
+                <div class="news-card">
+                  <img src="images/github-512.png" alt="news">
+                  <p class="text-light-blue">Заголовок какой-нибудь новости или поста в блоге. Заголовок какой-нибудь новости.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="footer-column">
+              <h4><span class="bckq"></span> Последние <span class="text-light">Работы</span></h4>
+              <div class="portfolio">
+                <div class="row mb-4">
+                  <div class="col-3 work-sample"></div>
+                  <div class="col-3 work-sample"></div>
+                  <div class="col-3 work-sample"></div>
+                  <div class="col-3 work-sample"></div>
+                </div>
+                <div class="row mb-4">
+                  <div class="col-3 work-sample"></div>
+                  <div class="col-3 work-sample"></div>
+                  <div class="col-3 work-sample"></div>
+                  <div class="col-3 work-sample"></div>
+                </div>
+                <div class="row mb-4">
+                  <div class="col-3 work-sample"></div>
+                  <div class="col-3 work-sample"></div>
+                  <div class="col-3 work-sample"></div>
+                  <div class="col-3 work-sample"></div>
+                </div>
+              </div>
+              <a href="#" class="portfolio-link"><span>+</span> Перейти к портфолио</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <div class="sub-footer">
+      <div class="container flex jc-sb">
+        <div class="sub-footer-info flex">
+          <p>Copyright 2017</p>
+          <span>John Doe |</span>
+          <p>Все права защищены</p>
+        </div>
+        <div class="sub-footer-info flex">
+          <a href="#">Условия использования</a>
+          <a href="#">Политика конфеденциальности</a>
+          <a href="#">Помощь</a>
+        </div>
+      </div>
+    </div>
   <!-- Nurbek -->
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 </html>
