--- a/index.html
+++ b/index.html
@@ -19,6 +19,223 @@
 
   <!-- Meir -->
     <!-- Что мы умеем to наши последние работы -->
+<section id="part1">
+    <div class="container">
+    	<div class="row centered">
+    	<div class="first col-lg-8 offset-lg-2">
+    		<div class="what">
+    			Что мы умеем
+    		</div> 
+    		<div class="word">
+    			uisque ligulas ipsum, euismod atras vulputate iltricies etri elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos
+    		</div>
+    	</div>
+    	</div>
+		<div class="container1">
+		    <div class="row">
+		        <div class="col-md-3 col-sm-6">
+		            <div class="progress blue">
+		                <span class="progress-left">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <span class="progress-right">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <div class="progress-value">90%</div>
+		            </div>
+		            <div class="stat">
+		            	HTML/CSS верстка
+		            </div>
+		            <div class="stat1">
+		            	Praesent turpis mauris, aliquet id dolor
+						Gravida adipiscing lectus ut rutrum 
+						Aenean at posuere risus.
+		            </div>
+		        </div>
+		        <div class="col-md-3 col-sm-6">
+		            <div class="progress yellow">
+		                <span class="progress-left">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <span class="progress-right">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <div class="progress-value">75%</div>
+		            </div>
+		            <div class="stat">
+		            	Веб дизайн
+		            </div>
+		            <div class="stat1">
+		            	Praesent turpis mauris, aliquet id dolor
+						Gravida adipiscing lectus ut rutrum 
+						Aenean at posuere risus.
+		            </div>
+		        </div>
+		        <div class="col-md-3 col-sm-6">
+		            <div class="progress pink">
+		                <span class="progress-left">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <span class="progress-right">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <div class="progress-value">70%</div>
+		            </div>
+		            <div class="stat">
+		            	Графический дизайн
+		            </div>
+		            <div class="stat1">
+		            	Praesent turpis mauris, aliquet id dolor
+						Gravida adipiscing lectus ut rutrum 
+						Aenean at posuere risus.
+		            </div>
+		        </div>
+		        <div class="col-md-3 col-sm-6">
+		            <div class="progress blue">
+		                <span class="progress-left">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <span class="progress-right">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <div class="progress-value">90%</div>
+		            </div>
+		            <div class="stat">
+						Back-end программирование
+		            </div>
+		            <div class="stat1">
+		            	Praesent turpis mauris, aliquet id dolor
+						Gravida adipiscing lectus ut rutrum 
+						Aenean at posuere risus.
+		            </div>
+		        </div>
+		    </div>
+		</div>
+     </div>
+</section>     
+ <section id="part2">
+ 	<div class="container">
+ 		<div class="row">
+	 	   	<div class="second text col-lg-8 offset-lg-2">
+	    		<div class="what2">
+	    			Что мы предлагаем
+	    		</div>
+	    		<div class="word2">
+	    			Quisque ligulas ipsum, euismod atras vulputate iltricies etri elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos
+	    		</div>
+	    	</div>
+		</div>
+	</div>
+<div class="cards">
+<div class="row">
+	<div class="card col-md-3 col-sm-6" >
+			<img class="card-img-top" src="images/Vector Smart Object.png" alt="Card image cap">
+		<div class="card-body">
+		    <h5 class="card-title">Маркетинг</h5>
+		    <p class="card-text">Integer ac massa vehicula, viverra augue et, uctor urna. Morbi nec enim et odio blandit tempor vitae sit amet est. Aenean non fringilla lacus, ultricies mi. </p>
+		</div>
+	</div>
+	<div class="card col-md-3 col-sm-6" >
+			<img class="card-img-top" src="images/Vector Smart Object1.png" alt="Card image cap">
+		<div class="card-body">
+		    <h5 class="card-title">Разработка сайта под ключ</h5>
+		    <p class="card-text">Integer ac massa vehicula, viverra augue et, uctor urna. Morbi nec enim et odio blandit tempor vitae sit amet est. Aenean non fringilla lacus, ultricies mi. </p>
+		</div>
+	</div>
+	<div class="card col-md-3 col-sm-6" >
+			<img class="card-img-top" src="images/Vector Smart Object2.png" alt="Card image cap">
+		<div class="card-body">
+		    <h5 class="card-title">Анализ и SEO</h5>
+		    <p class="card-text">Integer ac massa vehicula, viverra augue et, uctor urna. Morbi nec enim et odio blandit tempor vitae sit amet est. Aenean non fringilla lacus, ultricies mi. </p>
+		</div>
+	</div>
+	<div class="card col-md-3 col-sm-6" >
+			<img class="card-img-top" src="images/Vector Smart Object3.png" alt="Card image cap">
+		<div class="card-body">
+		    <h5 class="card-title">Любые дизайнерские работы</h5>
+		    <p class="card-text">Integer ac massa vehicula, viverra augue et, uctor urna. Morbi nec enim et odio blandit tempor vitae sit amet est. Aenean non fringilla lacus, ultricies mi. </p>
+		</div>
+	</div>
+</div>
+</div>
+</section>
+
+<section id="part3">
+	<div class="container">
+	     	<div class="text col-lg-8 offset-lg-2 ">
+	    		<div class="what2">
+					Наши последние работы
+	    		</div> 
+	    		<div class="word2">
+	    			Quisque ligulas ipsum, euismod atras vulputate iltricies etri elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos
+	    		</div>
+			</div>
+		<hr>
+		<nav class="nav nav-pills flex-column flex-sm-row">
+  			<a class="flex-sm-fill text-sm-center nav-link active" href="#">Все</a>
+  			<a class="flex-sm-fill text-sm-center nav-link" href="#">Веб-сайты</a>
+  			<a class="flex-sm-fill text-sm-center nav-link" href="#">Логотипы</a>
+  			<a class="flex-sm-fill text-sm-center nav-link" href="#">Бренд-буки</a>
+  			<a class="flex-sm-fill text-sm-center nav-link" href="#">Веб-дизайн</a>
+  			<a class="flex-sm-fill text-sm-center nav-link" href="#">Маркетинг</a>
+		</nav>
+		  <hr>
+		  <br>
+		  <br>
+		<div class="qqq">
+		<div class="row">
+		 	<div class="container3 col-md-3 col-sm-6 no-padding">
+  				<img src="images/7.jpg" alt="Avatar" class="image">
+  				<div class="overlay">
+				<div class="text1">Tooltip text</div>  				
+				</div>
+			</div>
+			<div class="container3 col-md-3 col-sm-6 no-padding">
+  			<img src="images/7.jpg" alt="Avatar" class="image">
+  			<div class="overlay">
+    			<div class="text1">Tooltip text</div>
+ 			 </div>
+			</div>
+			<div class="container3 col-md-3 col-sm-6 no-padding">
+  			<img src="images/8449.jpg" alt="Avatar" class="image">
+  			<div class="overlay">
+    			<div class="text1">Tooltip text</div>
+ 			 </div>
+			</div>
+			<div class="container3 col-md-3 col-sm-6 no-padding">
+  			<img src="images/img_fjords.jpg" alt="Avatar" class="image">
+  			<div class="overlay">
+    			<div class="text1">Tooltip text</div>
+ 			 </div>
+			</div>
+			<div class="container3 col-md-3 col-sm-6 no-padding">
+  			<img src="images/img_fjords.jpg" alt="Avatar" class="image">
+  			<div class="overlay">
+    			<div class="text1">Tooltip text</div>
+ 			 </div>
+			</div>
+			<div class="container3 col-md-3 col-sm-6 no-padding">
+  			<img src="images/img_fjords.jpg" alt="Avatar" class="image">
+  			<div class="overlay">
+    			<div class="text1">Tooltip text</div>
+ 			 </div>
+			</div>
+			<div class="container3 col-md-3 col-sm-6 no-padding">
+  			<img src="images/img_fjords.jpg" alt="Avatar" class="image">
+  			<div class="overlay">
+    			<div class="text1">Tooltip text</div>
+ 			 </div>
+			</div>
+			<div class="container3 col-md-3 col-sm-6 no-padding">
+  			<img src="images/img_fjords.jpg" alt="Avatar" class="image">
+  			<div class="overlay">
+    			<div class="text1">Tooltip text</div>
+ 			 </div>
+			</div>
+		</div>
+		</div>
+	</div>
+</section>
   <!-- Meir -->
 
   <!-- Alibek -->
